add sub-text + description

--- a/html/fr/accueil.html
+++ b/html/fr/accueil.html
@@ -5,6 +5,7 @@
         <title>Location tourisme meublé Barr</title>
         <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
         <link rel="stylesheet" href="../../css/style.css">
         <meta charset="UTF-8">
     </head>
@@ -18,5 +19,14 @@
             </ul>
         </div>
         <h1>Meublé de tourisme, Barr, Alsace</h1>
+        <h2>Charmant appartement dans une ancienne maison alsacienne à colombages au coeur du centre-ville de Barr, en Alsace (France).</h2>
+        <div class=left-description>
+            <p class=left-description-text>
+            À 20 minutes de Strasbourg, Bas-Rhin, sur la route des vins de l'Alsace, au coeur des Vosges, charmant appartement dans une ancienne maison alsacienne à colombages au coeur de centre-ville de la petite communauté de Barr. Poutres apparentes massives et meubles anciens donnent son charme typique au logis.
+            </p>
+            <p class=left-description-text>
+            Magnifique vue, du séjour, sur les vignes, et de la chambre, sur le Château du Haut-Andlau et sur la ville de Barr elle-même.
+            </p>
+        </div>
     </body> </div>
 </html>
