add images on front page

--- a/html/fr/accueil.html
+++ b/html/fr/accueil.html
@@ -19,6 +19,12 @@
             </ul>
         </div>
         <h1>Meublé de tourisme, Barr, Alsace</h1>
+        <div class=photos>
+            <img src=../../img/front-page/table.jpg>
+            <img class="small-square" src=../../img/front-page/kitchen.jpg>
+            <img class="small-square" src=../../img/front-page/couch.jpg>
+            <img class="small-rect" src=../../img/front-page/bed.jpg>
+        </div>
         <h2>Charmant appartement dans une ancienne maison alsacienne à colombages au coeur du centre-ville de Barr, en Alsace (France).</h2>
         <div class=left-description>
             <p class=left-description-text>
@@ -26,6 +32,11 @@
             </p>
             <p class=left-description-text>
             Magnifique vue, du séjour, sur les vignes, et de la chambre, sur le Château du Haut-Andlau et sur la ville de Barr elle-même.
+            </p>
+        </div>
+        <div class=right-description>
+            <p>
+            blablabla
             </p>
         </div>
     </body> </div>
