--- a/html/fr/accueil.html
+++ b/html/fr/accueil.html
@@ -35,8 +35,11 @@
             </p>
         </div>
         <div class=right-description>
+            <div class=right-desc-headshots>
+                <img class=headshot src=../../img/front-page/amelie.jpg>
+                <img class=headshot src=../../img/front-page/benjamin.jpg>
+            <div>
             <p>
-            blablabla
             </p>
         </div>
     </body> </div>
