--- a/html/fr/accueil.html
+++ b/html/fr/accueil.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../../css/style.css">
         <meta charset="UTF-8">
     </head>
-    <div class=content> <body>
+    <body>
         <div class=top-banner>
             <ul>
                 <li><a class=top-banner-nav href="accueil.html">Accueil</a></li>
@@ -26,21 +26,51 @@
             <img class="small-rect" src=../../img/front-page/bed.jpg>
         </div>
         <h2>Charmant appartement dans une ancienne maison alsacienne à colombages au coeur du centre-ville de Barr, en Alsace (France).</h2>
-        <div class=left-description>
-            <p class=left-description-text>
-            À 20 minutes de Strasbourg, Bas-Rhin, sur la route des vins de l'Alsace, au coeur des Vosges, charmant appartement dans une ancienne maison alsacienne à colombages au coeur de centre-ville de la petite communauté de Barr. Poutres apparentes massives et meubles anciens donnent son charme typique au logis.
+        <div class=short-description>
+            <p class=short-description-text>
+                À 20 minutes de Strasbourg, Bas-Rhin, sur la route des vins de l'Alsace, au coeur des Vosges, charmant appartement dans une ancienne maison alsacienne à colombages au coeur de centre-ville de la petite communauté de Barr.
             </p>
-            <p class=left-description-text>
-            Magnifique vue, du séjour, sur les vignes, et de la chambre, sur le Château du Haut-Andlau et sur la ville de Barr elle-même.
+            <p class=short-description-text>
+                Poutres apparentes massives et meubles anciens donnent son charme typique au logis.
             </p>
+            <p class=short-description-text>
+                Magnifique vue, du séjour, sur les vignes, et de la chambre, sur le Château du Haut-Andlau et sur la ville de Barr elle-même.
+            </p>
+            <div id=more-details-div>
+                <a id=more-details href="details.html">En savoir plus</a>
+            </div>
         </div>
-        <div class=right-description>
-            <div class=right-desc-headshots>
+        <div class=bio>
+            <div id=hotes-entete>
+                <p>
+                Vos hôtes
+                </p>
+            </div>
+            <div class=hotes-text>
+                Nous sommes un couple de canadiens, et possédons un petit pied-à-terre en Alsace que nous louons lorsque nous ne sommes pas présents.
+            </div>
+            <div class=bio-headshots>
                 <img class=headshot src=../../img/front-page/amelie.jpg>
                 <img class=headshot src=../../img/front-page/benjamin.jpg>
-            <div>
-            <p>
-            </p>
+            </div>
+            <div id=hotes>
+                <div class=hote>
+                    <p class=hote-name>
+                        Amélie
+                    </p>
+                    <p class=hote-bio>
+                        Je suis pianiste, accompagnatrice et professeure de piano. Ayant voyagé plusieurs fois en Alsace, je suis tombée en amour avec la rédion et la ville de Barr en particulier. J'ai donc eu l'idée d'avoir un pied-à-terre en Europe dans le Bas-Rhin. Et j'ai entraîné Benjamin dans ce projet.
+                    </p>
+                </div>
+                <div class=hote>
+                    <p class=hote-name>
+                        Benjamin
+                    </p>
+                    <p class=hote-bio>
+                        Je suis ingénieur en informatique pour systèmes embarqués et geek en général. J'adore voyager en Europe et j'ai eu un coup de foudre pour l'Alsace. Et j'ai suivi Amélie dans ce projet d'avoir notre place à nous sur le vieux continent.
+                    </p>
+                </div>
+            </div>
         </div>
-    </body> </div>
+    </body>
 </html>
