french + english basic + www.du-college.info

--- a/html/en/details.html
+++ b/html/en/details.html
@@ -14,7 +14,7 @@
                 <li><a class=top-banner-nav href="welcome.html">Welcome</a></li>
                 <li><a class=top-banner-nav href="details.html">Details</a></li>
                 <li><a class=top-banner-nav href="contact.html">Contact</a></li>
-                <li><a class=top-banner-lang href="../fr/accueil.html">fr</a></li>
+                <li><a class=top-banner-lang href="../fr/details.html">fr</a></li>
             </ul>
         </div>
         <h1>Furnished tourism rental, Barr, Alsace</h1>
