--- a/html/fr/accueil.html
+++ b/html/fr/accueil.html
@@ -20,10 +20,10 @@
         </div>
         <h1>Meublé de tourisme, Barr, Alsace</h1>
         <div class=photos>
-            <img src=../../img/front-page/table.jpg>
-            <img class="small-square" src=../../img/front-page/kitchen.jpg>
-            <img class="small-square" src=../../img/front-page/couch.jpg>
-            <img class="small-rect" src=../../img/front-page/bed.jpg>
+            <img class="img_float_left" src=../../img/front-page/table.jpg>
+            <img class="img_float_left small-square" src=../../img/front-page/kitchen.jpg>
+            <img class="img_float_left small-square" src=../../img/front-page/couch.jpg>
+            <img class="img_float_left small-rect" src=../../img/front-page/bed.jpg>
         </div>
         <h2>Charmant appartement dans une ancienne maison alsacienne à colombages au coeur du centre-ville de Barr, en Alsace (France).</h2>
         <div class=short-description>
@@ -50,8 +50,8 @@
                 Nous sommes un couple de canadiens, et possédons un petit pied-à-terre en Alsace que nous louons lorsque nous ne sommes pas présents.
             </div>
             <div class=bio-headshots>
-                <img class=headshot src=../../img/front-page/amelie.jpg>
-                <img class=headshot src=../../img/front-page/benjamin.jpg>
+                <img class="img_float_left headshot" src=../../img/front-page/amelie.jpg>
+                <img class="img_float_left headshot" src=../../img/front-page/benjamin.jpg>
             </div>
             <div id=hotes>
                 <div class=hote>
