--- a/html/en/contact.html
+++ b/html/en/contact.html
@@ -14,10 +14,12 @@
                 <li><a class=top-banner-nav href="welcome.html">Welcome</a></li>
                 <li><a class=top-banner-nav href="details.html">Details</a></li>
                 <li><a class=top-banner-nav href="contact.html">Contact</a></li>
-                <li><a class=top-banner-lang href="../fr/accueil.html">fr</a></li>
+                <li><a class=top-banner-lang href="../fr/contact.html">fr</a></li>
             </ul>
         </div>
         <h1>Furnished tourism rental, Barr, Alsace</h1>
-        <h2>English version coming soon</h2>
+        <h3>For logistics (communication, reservations, calendar, prices, payment, etc), we use <strong>Airbnb</strong>.</h3>
+        <img id=airbnb_logo src=../../img/airbnb_200px.png>
+        <div><h3>To be able to rent our apartment, you need an Airbnb account and then go to the <a href=https://airbnb.com/rooms/1737594>page for our apartment</a>. Click <a href=https://airbnb.com/rooms/1737594>here</a> or on the Airbnb logo anywhere on this site to get there.</h3></div>
     </body>
 </html>
