--- a/html/fr/details.html
+++ b/html/fr/details.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <title>Barr tourism rental</title>
+        <title>Location tourisme meublé Barr</title>
         <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
@@ -11,13 +12,13 @@
     <body>
         <div class=top-banner>
             <ul>
-                <li><a class=top-banner-nav href="welcome.html">Welcome</a></li>
-                <li><a class=top-banner-nav href="details.html">Details</a></li>
+                <li><a class=top-banner-nav href="accueil.html">Accueil</a></li>
+                <li><a class=top-banner-nav href="details.html">Détails</a></li>
                 <li><a class=top-banner-nav href="contact.html">Contact</a></li>
-                <li><a class=top-banner-lang href="../fr/accueil.html">fr</a></li>
+                <li><a class=top-banner-lang href="../en/details.html">en</a></li>
             </ul>
         </div>
-        <h1>Furnished tourism rental, Barr, Alsace</h1>
-        <h2>English version coming soon</h2>
+        <h1>Meublé de tourisme, Barr, Alsace</h1>
+        <h2>Bientôt disponible</h2>
     </body>
 </html>
